--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,15 @@
   "extends": [
     "next/core-web-vitals",
     "next/typescript"
-  ]
+  ],
+  "rules": {
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-unused-vars": "off",
+    "@typescript-eslint/ban-ts-comment": "off",
+    "@typescript-eslint/no-unsafe-function-type": "off",
+    "@next/next/no-img-element": "off",
+    "prefer-const": "off",
+    "react/no-unescaped-entities": "off",
+    "react-hooks/rules-of-hooks": "off"
+  }
 }
