--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "db:seed:destinations": "tsx prisma/seed-destinations.ts",
     "db:reset": "scripts/reset-and-seed.sh"
   },
+  "prisma": {
+    "seed": "pnpm exec tsx prisma/seed.ts"
+  },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@next-auth/prisma-adapter": "^1.0.7",
