--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start": "next start",
     "db:seed": "tsx prisma/seed.ts",
     "db:seed:destinations": "tsx prisma/seed-destinations.ts",
-    "db:reset": "scripts/reset-and-seed.sh"
+    "db:reset": "scripts/reset-and-seed.sh",
+    "automation:worker": "tsx scripts/automation-worker.ts",
+    "cleanup:comms": "tsx scripts/cleanup-communications.ts"
   },
   "prisma": {
     "seed": "pnpm exec tsx prisma/seed.ts"
